Michael: remove tabs and add cards as categories with search capability; polish toolkit styles

--- a/css/_general_layout.scss
+++ b/css/_general_layout.scss
@@ -80,7 +80,6 @@ md-tabs {
 }
 
 .search-bar {
-	max-width: 320px;
 	width: 100%;
 
 	label {
@@ -102,6 +101,7 @@ md-tabs {
 article {
 	&[ng-view] {
 		background: $light-grey;
+		padding-bottom: $large-space * 3;
 	}
 }
 
