--- a/css/_main.scss
+++ b/css/_main.scss
@@ -92,11 +92,19 @@ body {
 	  line-height: 1;
 	  margin-right: $small-space;
 	  margin-top: 8px;
+	  min-width: 40px;
 	  text-align: left;
 	}
 
 	a {
 		color: inherit;
+
+		ng-md-icon {
+			fill: $font-color;
+			margin-right: 8px;
+			max-width: 32px;
+			min-width: 32px;
+		}
 	}
 }
 
