--- a/css/main_style.css
+++ b/css/main_style.css
@@ -43,9 +43,15 @@ body {
     line-height: 1;
     margin-right: 16px;
     margin-top: 8px;
+    min-width: 40px;
     text-align: left; }
   .md-display-1 a {
     color: inherit; }
+    .md-display-1 a ng-md-icon {
+      fill: rgba(0, 0, 0, 0.87);
+      margin-right: 8px;
+      max-width: 32px;
+      min-width: 32px; }
 
 .md-headline {
   font-size: 2.4rem;
@@ -161,7 +167,6 @@ md-tabs a {
   padding: 20px 24px; }
 
 .search-bar {
-  max-width: 320px;
   width: 100%; }
   .search-bar label, .search-bar .md-input {
     padding-left: 24px !important; }
@@ -172,7 +177,8 @@ md-tabs a {
     left: 0; }
 
 article[ng-view] {
-  background: #f0f0f0; }
+  background: #f0f0f0;
+  padding-bottom: 72px; }
 
 ng-md-icon svg {
   vertical-align: middle; }
@@ -210,116 +216,42 @@ section main.bg-white-trans .copy {
   overflow: hidden;
   overflow-y: auto;
   padding: 24px; }
-section main md-card {
-  background: #fff; }
-  section main md-card .redirect {
-    color: inherit; }
-    section main md-card .redirect i {
-      font-style: normal;
-      color: #0288d1; }
-  section main md-card .icon {
-    max-width: 112px;
-    min-width: 112px;
-    padding: 16px;
-    text-align: center; }
-    section main md-card .icon img {
-      max-height: 112px;
-      width: auto; }
-  section main md-card .snippet {
-    border-left: 1px solid rgba(0, 0, 0, 0.12);
-    padding: 16px;
-    width: calc(100% - 112px); }
-    section main md-card .snippet h3 {
-      margin-bottom: 16px; }
-  section main md-card.toolkit-card .title {
-    color: #0288d1;
-    padding: 16px; }
-    section main md-card.toolkit-card .title ng-md-icon {
-      fill: #0288d1; }
-  section main md-card.toolkit-card .snippet {
-    max-height: 56px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    width: 100%; }
-    section main md-card.toolkit-card .snippet img {
-      display: none; }
 section main .graph {
   background: #fff;
   padding: 16px; }
-section main .categories {
-  display: block; }
-  section main .categories md-list-item {
-    display: block; }
-    section main .categories md-list-item .md-button {
-      border-radius: 0;
-      border-top: 1px solid rgba(0, 0, 0, 0.12);
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      margin: 0;
-      text-align: left;
-      width: 100%; }
-      section main .categories md-list-item .md-button ng-md-icon svg {
-        -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-        -ms-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-        -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1); }
-      section main .categories md-list-item .md-button.active {
-        background: rgba(158, 158, 158, 0.2);
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        color: rgba(0, 0, 0, 0.87); }
-        section main .categories md-list-item .md-button.active ng-md-icon {
-          fill: rgba(0, 0, 0, 0.87); }
-          section main .categories md-list-item .md-button.active ng-md-icon svg {
-            -moz-transform: rotate(180deg);
-            -ms-transform: rotate(180deg);
-            -webkit-transform: rotate(180deg);
-            transform: rotate(180deg); }
-  section main .categories .expanded-content {
-    background: rgba(158, 158, 158, 0.2);
-    max-height: none;
-    overflow: hidden;
-    padding: 24px;
-    -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-    -ms-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1); }
-    section main .categories .expanded-content.ng-enter {
-      max-height: 0; }
-    section main .categories .expanded-content.ng-enter.ng-enter-active {
-      max-height: 1000px; }
-    section main .categories .expanded-content.ng-leave {
-      max-height: 1000px; }
-    section main .categories .expanded-content.ng-leave.ng-leave-active {
-      max-height: 0; }
-    section main .categories .expanded-content a {
-      background: rgba(255, 255, 255, 0.2);
-      margin: 2px 0;
-      padding: 8px 6px;
-      -moz-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      -ms-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1); }
-      section main .categories .expanded-content a:hover {
-        background: rgba(255, 255, 255, 0.5); }
-      section main .categories .expanded-content a span {
-        display: inline-block;
-        margin-right: 8px;
-        max-width: 150px; }
-      section main .categories .expanded-content a .snippet {
-        color: rgba(0, 0, 0, 0.54);
-        display: inline-block;
-        height: 24px;
-        margin-right: 0;
-        max-width: calc(100% - 200px);
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap; }
-        section main .categories .expanded-content a .snippet br,
-        section main .categories .expanded-content a .snippet img,
-        section main .categories .expanded-content a .snippet pre {
-          display: none; }
+section main .categories md-card {
+  background: #fff;
+  margin: 8px;
+  width: calc(50% - 16px); }
+  section main .categories md-card .category-title {
+    background: #0288d1;
+    color: #fff;
+    padding: 16px; }
+  section main .categories md-card .md-button {
+    border-top: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 0;
+    font-weight: 400;
+    line-height: 1.5em;
+    padding: 16px;
+    text-align: left;
+    text-transform: none;
+    width: 100%; }
+    section main .categories md-card .md-button:first-child {
+      border-top: none; }
+    section main .categories md-card .md-button .toolkit-title {
+      color: #0288d1; }
+    section main .categories md-card .md-button .toolkit-snippet {
+      display: block;
+      max-height: 25px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 99%; }
+      section main .categories md-card .md-button .toolkit-snippet pre,
+      section main .categories md-card .md-button .toolkit-snippet img,
+      section main .categories md-card .md-button .toolkit-snippet a,
+      section main .categories md-card .md-button .toolkit-snippet br {
+        display: none; }
 
 /* ==========================================================================
    toolkit view
@@ -345,11 +277,11 @@ section ul.tags {
       margin-right: 0; }
 section pre {
   background: rgba(255, 255, 255, 0.6);
-  color: #ff5722;
-  font: 500 16px/1.6em 'Source Code Pro', monospace;
-  padding: 16px;
-  white-space: normal;
-  word-break: break-all; }
+  color: rgba(0, 0, 0, 0.54);
+  font: 500 13px/1.6em 'Source Code Pro', monospace;
+  overflow: hidden;
+  overflow-x: auto;
+  padding: 16px; }
 section.block-color header {
   color: #fff;
   padding: 24px; }
@@ -367,9 +299,15 @@ section.block-color.accent {
     background: #0288d1; }
 section.block-color ul {
   margin: 0; }
+section.summary img {
+  background: #fff;
+  padding: 8px; }
+section.demo img {
+  background: #fff;
+  padding: 8px; }
 section.quick-start main {
   padding: 0 24px 24px; }
-  section.quick-start main li {
+  section.quick-start main > ul > li {
     background: rgba(255, 255, 255, 0.6);
     background: rgba(255, 255, 255, 0.25);
     -moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
@@ -378,6 +316,13 @@ section.quick-start main {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     margin: 24px 0;
     padding: 24px; }
+  section.quick-start main > ul ul {
+    list-style: disc;
+    margin: 1em 0;
+    padding: 0 0 1em 1em; }
+  section.quick-start main img {
+    background: #fff;
+    padding: 8px; }
 section.pro-tips li {
   margin: 16px 0;
   padding: 24px; }
@@ -397,6 +342,10 @@ section.pro-tips li {
 section iframe {
   max-width: 100%; }
 
+footer.links h3 {
+  padding-bottom: 0; }
+footer.links ul {
+  margin: 0; }
 footer.links a {
   display: block;
   overflow: hidden;
@@ -432,20 +381,24 @@ footer.links a {
   .md-button {
     width: 100%; }
 
+  .md-display-1.numeral {
+    display: none; }
+
   section main md-card.toolkit-card .title {
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     width: 100%; }
   section main md-card.toolkit-card .snippet {
     border: none; }
-  section main .categories .expanded-content {
-    padding: 16px; }
+  section main .categories md-card {
+    margin: 8px 0;
+    width: 100%; }
   section.block-color header {
     padding: 16px; }
   section.block-color main {
     padding: 16px; }
   section.quick-start main {
     padding: 0 16px 16px; }
-    section.quick-start main li {
+    section.quick-start main > ul > li {
       margin: 16px 0;
       padding: 16px; }
   section.pro-tips li {
