--- a/css/_splash.scss
+++ b/css/_splash.scss
@@ -26,10 +26,29 @@ section {
 		}
 
 		.categories {
+			-moz-column-count: 2;
+	    -moz-column-gap: 0;
+	    -webkit-column-count: 2;
+	    -webkit-column-gap: 0;
+	    column-count: 2;
+	    column-gap: 0;
+	    width: 100%;
+
 			md-card {
 				background: #fff;
-				margin: 8px;
-				width: calc(50% - 16px);
+				display: inline-block;
+				line-height: 0;
+				margin: 8px 0;
+				@include transition(.5s, $cubic);
+				width: calc(100% - 16px);
+
+				&.ng-hide {
+					opacity: 0;
+				  -moz-transform: translateY(100px);
+				  -ms-transform: translateY(100px);
+				  -webkit-transform: translateY(100px);
+				  transform: translateY(100px);
+				}
 
 				.category-title {
 					background: $accent-color;
@@ -68,6 +87,10 @@ section {
 						a,
 						br {
 							display: none;
+						}
+
+						p {
+							margin: 0 !important;
 						}
 					}
 				}
