fix paragraph ellipsis

--- a/css/_splash.scss
+++ b/css/_splash.scss
@@ -91,6 +91,9 @@ section {
 
 						p {
 							margin: 0 !important;
+						  overflow: hidden;
+						  text-overflow: ellipsis;
+						  white-space: nowrap;
 						}
 					}
 				}
