--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,8 +1,14 @@
 /* ==========================================================================
    global
 ========================================================================== */
+* {
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 html, body {
-  background: #f0f0f0;
+  background: #fff;
   font: 400 10px/1.846 RobotoDraft, Roboto, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility; }
@@ -115,7 +121,8 @@ md-progress-circular {
 header h3 {
   padding: 16px 0; }
 header.masthead {
-  background: #ff5722;
+  display: none;
+  background: #0288d1;
   padding: 16px 0;
   position: relative;
   overflow: hidden; }
@@ -177,7 +184,7 @@ md-tabs a {
     left: 0; }
 
 article[ng-view] {
-  background: #f0f0f0;
+  background: #fff;
   padding-bottom: 72px; }
 
 ng-md-icon svg {
@@ -186,7 +193,7 @@ ng-md-icon svg {
 section {
   margin: 24px 0; }
   section.breadcrumbs {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.3);
     margin: 0;
     padding-bottom: 8px;
     padding-top: 8px; }
@@ -194,7 +201,7 @@ section {
       font-style: normal;
       margin: 0 2px; }
   section .bg-white-trans {
-    background: rgba(255, 255, 255, 0.6); }
+    background: rgba(255, 255, 255, 0.3); }
 
 ul.no-style {
   list-style: none;
@@ -216,6 +223,10 @@ section main.bg-white-trans .copy {
   overflow: hidden;
   overflow-y: auto;
   padding: 24px; }
+section main .blurb .logo {
+  margin-right: 16px;
+  max-width: 150px;
+  min-width: 150px; }
 section main .graph {
   background: #fff;
   padding: 16px; }
@@ -223,7 +234,7 @@ section main .categories {
   -moz-column-count: 2;
   -moz-column-gap: 0;
   -webkit-column-count: 2;
-  -webkit-column-gap: 0;
+  -webkit-column-gap: 16px;
   column-count: 2;
   column-gap: 0;
   width: 100%; }
@@ -236,7 +247,7 @@ section main .categories {
     -ms-transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     -webkit-transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    width: calc(100% - 16px); }
+    width: calc(100% - 5px); }
     section main .categories md-card.ng-hide {
       opacity: 0;
       -moz-transform: translateY(100px);
@@ -248,6 +259,8 @@ section main .categories {
       color: #fff;
       padding: 16px; }
     section main .categories md-card .md-button {
+      border-left: 1px solid rgba(0, 0, 0, 0.12);
+      border-right: 1px solid rgba(0, 0, 0, 0.12);
       border-top: 1px solid rgba(0, 0, 0, 0.12);
       border-radius: 0;
       font-weight: 400;
@@ -256,7 +269,7 @@ section main .categories {
       text-align: left;
       text-transform: none;
       width: 100%; }
-      section main .categories md-card .md-button:first-child {
+      section main .categories md-card .md-button:nth-child(2) {
         border-top: none; }
       section main .categories md-card .md-button .toolkit-title {
         color: #0288d1; }
@@ -284,9 +297,9 @@ section main .categories {
 section ul.tags {
   flex-wrap: wrap; }
   section ul.tags ng-md-icon {
-    fill: rgba(0, 0, 0, 0.26); }
+    fill: rgba(0, 0, 0, 0.12); }
   section ul.tags li {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(0, 0, 0, 0.12);
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -297,43 +310,60 @@ section ul.tags {
     margin-top: 8px;
     padding: 0 6px; }
     section ul.tags li:first-child {
-      background: none; }
+      background: none;
+      max-width: 32px;
+      margin-right: 8px;
+      min-width: 32px; }
     section ul.tags li:last-child {
       margin-right: 0; }
 section pre {
-  background: rgba(255, 255, 255, 0.6);
+  background: #fafafa;
   color: rgba(0, 0, 0, 0.54);
   font: 500 13px/1.6em 'Source Code Pro', monospace;
   overflow: hidden;
   overflow-x: auto;
   padding: 16px; }
+  section pre::-webkit-scrollbar {
+    height: 4px; }
+  section pre::-webkit-scrollbar-track {
+    height: 4px; }
+  section pre::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.26);
+    border-radius: 0;
+    height: 4px; }
 section.block-color header {
   color: #fff;
   padding: 24px; }
   section.block-color header h3 {
     padding: 0; }
+section.block-color pre {
+  background: rgba(255, 255, 255, 0.3); }
 section.block-color main {
   padding: 24px; }
 section.block-color.primary {
   background: #ffccbc; }
   section.block-color.primary header {
     background: #ff5722; }
+  section.block-color.primary pre::-webkit-scrollbar-thumb {
+    background: #ff5722; }
 section.block-color.accent {
   background: #b3e5fc; }
   section.block-color.accent header {
     background: #0288d1; }
+  section.block-color.accent pre::-webkit-scrollbar-thumb {
+    background: #0288d1; }
 section.block-color ul {
   margin: 0; }
 section.summary img {
-  background: #fff;
+  background: #fafafa;
   padding: 8px; }
 section.demo img {
-  background: #fff;
+  background: rgba(255, 255, 255, 0.3);
   padding: 8px; }
 section.quick-start main {
   padding: 0 24px 24px; }
   section.quick-start main > ul > li {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.3);
     background: rgba(255, 255, 255, 0.25);
     -moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     -ms-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
@@ -346,7 +376,7 @@ section.quick-start main {
     margin: 1em 0;
     padding: 0 0 1em 1em; }
   section.quick-start main img {
-    background: #fff;
+    background: rgba(255, 255, 255, 0.3);
     padding: 8px; }
 section.pro-tips li {
   margin: 16px 0;
@@ -367,12 +397,9 @@ section.pro-tips li {
 section iframe {
   max-width: 100%; }
 
-footer.links h3 {
-  padding-bottom: 0; }
 footer.links ul {
-  margin: 0; }
+  margin: 16px 0; }
 footer.links a {
-  display: block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -414,6 +441,11 @@ footer.links a {
     width: 100%; }
   section main md-card.toolkit-card .snippet {
     border: none; }
+  section main .blurb .logo {
+    margin-bottom: 16px;
+    margin-right: 0;
+    max-width: 100px;
+    min-width: 100px; }
   section main .categories {
     -moz-column-count: 1;
     -moz-column-gap: 0;
