--- a/css/main_style.css
+++ b/css/main_style.css
@@ -14,7 +14,7 @@ html, body {
   text-rendering: optimizeLegibility; }
 
 body {
-  height: 100%; }
+  height: auto; }
   body .cf {
     *zoom: 1; }
     body .cf:before, body .cf:after {
