getting sassy with sass, now the iFrame has height auto and tells parent by posting a message.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -8,6 +8,7 @@
   box-sizing: border-box; }
 
 html, body {
+  height: auto;
   background: #fff;
   font: 400 10px/1.846 RobotoDraft, Roboto, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
