--- a/css/_main.scss
+++ b/css/_main.scss
@@ -37,6 +37,7 @@ $cubic: cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
 html {
+	height: auto;
 	background: #fff;
 	font: 400 10px/1.846 $font-stack;
 	-webkit-font-smoothing: antialiased;
