removed overflow:hidden, added traces to postMessage

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -8,8 +8,7 @@
   box-sizing: border-box; }
 
 html, body, body {
-  height: auto;
-  overflow: hidden; }
+  height: auto; }
 
 html, body {
   background: #fff;
